{
    "name": "GameplayControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "0891b258-4dff-4972-823a-b48ea19df143",
            "actions": [
                {
                    "name": "Cross",
                    "type": "Button",
                    "id": "774f2d48-f30b-45f6-a4e8-ccaac24d5a37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Square",
                    "type": "Button",
                    "id": "c57364c4-16bc-4a0b-a52f-a2d23105bf27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Triangle",
                    "type": "Button",
                    "id": "24d7ef9b-c669-405c-b07b-f0310f4cae13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Circle",
                    "type": "Button",
                    "id": "34b228ee-fba3-45fb-9aab-3483b9fd82ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpArrow",
                    "type": "Button",
                    "id": "f2b5bb2f-2ddd-4058-9351-6c3293d1665b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownArrow",
                    "type": "Button",
                    "id": "7e0ea8a2-87f0-4e5a-a3e9-ae52201a2087",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArrow",
                    "type": "Button",
                    "id": "4757a99d-cc59-431e-8003-f26d2b849b99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArrow",
                    "type": "Button",
                    "id": "4b556b94-7263-46d1-8705-8595f81ec19b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftButton",
                    "type": "Button",
                    "id": "26f33818-dee5-47d5-902c-d83d4fa11a24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightButton",
                    "type": "Button",
                    "id": "ea262129-634e-4b1a-8c7d-ea2a86ffe2f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "a9c8932d-daef-4b8c-b8dd-8bac329cf66c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "2da8b831-728c-4055-9b61-b93eec287fc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc67ffa5-8349-4f78-82e8-b18173e15020",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f41e3548-de02-45de-8d43-288f9998a544",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Square",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "965a5bbf-6bdb-4046-907a-cb23bf8a65ab",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Triangle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e004ebc9-7b86-4284-89bb-3e6b9a3955de",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Circle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "959104fb-b102-43d3-bfba-fe348a7a73f8",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3a603dd-beef-4a61-9ab7-595e44a1eabb",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f17289b0-562a-4408-9d61-b8ae9e33f17f",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21e884a3-7a57-4d99-a0f1-f335f833ce2d",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d4253d1-8560-4328-88b3-fd1d7c920444",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50ef1d95-66b6-4c6a-8337-498cb41e1833",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a36b86da-41a6-4817-b503-00d22db28642",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1920c911-4188-4637-9ae5-9dd8e2e02e4c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseMenu",
            "id": "66f47986-19a8-457e-a5ef-d950934c3724",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "8dff6022-a74e-45fe-9227-46ea4c448875",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24d5bc05-8f09-401c-90a0-64b062188445",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}